--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.hpeng2.todolist.MainActivity"
+            android:name=".MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,20 +23,24 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.hpeng2.todolist.AddEventActivity"
+            android:name=".AddEventActivity"
             android:label="@string/title_activity_add_event" >
         </activity>
         <activity
-            android:name="com.hpeng2.todolist.ArchivedEventActivity"
+            android:name=".ArchivedEventActivity"
             android:label="@string/title_activity_archived_event" >
         </activity>
         <activity
-            android:name="com.hpeng2.todolist.EmailEventActivity"
+            android:name=".EmailEventActivity"
             android:label="@string/title_activity_email_event" >
         </activity>
         <activity
-            android:name="com.hpeng2.todolist.StatisticsActivity"
+            android:name=".StatisticsActivity"
             android:label="@string/title_activity_statistics" >
+        </activity>
+        <activity
+            android:name=".ToDoEventActivity"
+            android:label="@string/title_activity_to_do_event" >
         </activity>
     </application>
 
